# dummy_app

./: .gitignore  README.md  dockerfile  entrypoint.sh  finalized_model.sav  pyproject.toml  setup.py  test.db  test.toml
.github/workflows/: python-app.yml
app/: requirements.txt
archive/: requirements.txt
dummy-app2/: pyproject.toml
dummy-app2/dummy_app2/: model_api_v2.py
dummy_app/: app.py  dockerfile  finalized_model.sav  model_api_v2.py  test.db
