[tool.poetry]
name = "dummy-app"
version = "0.1.0"
description = "My dummy dash app"
authors = ["Lachlan Bubb <lachlan_bubb@live.com>"]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8.18"
dash   = "^2.0.0"
pytest = "^7.4.0"
black  = "23.11.0"
flake8 = "6.1.0"
Flask = "3.0.0"
numpy = "1.24.4"
pandas = "2.0.3"
requests = "2.31.0"
scikit-learn = "1.3.1"
SQLAlchemy = "2.0.22"